# synapse-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  rust-toolchain.toml
client/: Cargo.toml  build.rs  index.html  main.ts  package-lock.json  package.json  vite.config.mts
client/islands/diagram/: d2.ts  loader.ts  mermaid.ts
client/islands/editor/: loader.ts  monaco.ts
client/islands/markdown/: render.test.ts  render.ts
client/islands/tracer/: java-harness.java  java.ts  loader.ts  python-harness.py  python.ts
client/src/: hydration.rs  lib.rs  seo.rs  storage.rs
client/src/api/: mod.rs
client/src/blog/: mod.rs
client/src/blog/state/: mod.rs
client/src/blog/view/: mod.rs
client/src/catalog/logic/: editorial.rs  editorial_tests.rs  logic_tests.rs  mod.rs  pane.rs  prefs.rs  progress.rs
client/src/catalog/state/: mod.rs
client/src/catalog/view/: c4.rs  c4_docs.rs  chrome.rs  diagrams.rs  editorial.rs  library.rs  mod.rs  prefs.rs  problem.rs  reader.rs  sidebar.rs  tour.rs
client/src/execution/logic/: blocks.rs  executor.rs  executor_tests.rs  language.rs  mod.rs  practice.rs
client/src/execution/state/: lang_pref.rs  mod.rs
client/src/execution/view/: codebench.rs  fence_group.rs  hydrate.rs  icons.rs  mod.rs  practice.rs  runnable.rs  workbench.rs
client/src/identity/state/: mod.rs
client/src/identity/view/: account_page.rs  admin_page.rs  mod.rs
client/src/islands/: diagram.rs  editor.rs  mod.rs  tracer.rs
client/src/quiz/: mod.rs
client/src/router/: page.rs
client/src/search/: mod.rs
client/src/search/logic/: logic_tests.rs  mod.rs
client/src/search/state/: mod.rs
client/src/search/view/: mod.rs
client/src/shell/: footer.rs  mod.rs  theme.rs
client/src/viz/: blocks.rs  decoder.rs  host.rs  mod.rs  modal.rs  registry.rs  session.rs  shapes.rs  transport.rs
client/src/viz/engine/: graph_tests.rs  mod.rs  render_family.rs  trace.rs  vocabulary.rs
client/src/viz/engine/adapt/: callstack.rs  cards.rs  cleanup.rs  cursors.rs  diff.rs  error.rs  flow.rs  mod.rs  narration.rs  projection.rs  rooting.rs  segmentation.rs  snapshot.rs  vocab.rs
client/src/viz/engine/geometry/: chain.rs  chain_tests.rs  constants.rs  graph_layout.rs  graph_layout_tests.rs  grid.rs  linear.rs  (+4 more)
client/src/viz/render/: buckets.rs  cells.rs  chain.rs  dom.rs  dual.rs  graph_canvas.rs  grid_table.rs  list_chain.rs  mod.rs  strip.rs  tree.rs
client/styles/: account.css  blog.css  coach.css  codebench.css  diagrams.css  library.css  markdown.css  practice.css  reader.css  runnable.css  search.css  shell.css  stylesheets.test.ts  tokens.css  tour.css  viz.css
client/tests/: adapt_stages.rs  cortex_goldens.rs
client/tests/fixtures/: cortex-fixture-inputs.json
client/tests/fixtures/cortex-goldens/: array.json  avl-rotation.json  bitset.json  fenwick.json  graph-bfs.json  graph-kind.json  hashmap-chained-collisions.json  hashmap-kind.json  heap.json  linked-list.json  queue.json  segment-tree.json  skiplist.json  stack-push.json  trie.json  union-find.json
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs
server/src/authoring/: mod.rs
server/src/authoring/application/: message.rs  message_tests.rs  mod.rs  ports.rs  service_fakes.rs  service_tests.rs
server/src/authoring/domain/: branch.rs  branch_tests.rs  edit.rs  mod.rs  validation.rs  validation_tests.rs
server/src/authoring/http/: admin.rs  dto.rs  dto_tests.rs  mod.rs
server/src/authoring/infrastructure/: configured.rs  dry_run.rs  github.rs  github_wire.rs  lesson_source.rs  lesson_source_tests.rs  mod.rs  postgres.rs
server/src/blog/: mod.rs
server/src/blog/application/: mod.rs  service_tests.rs
server/src/blog/domain/: blog_tests.rs  mod.rs
server/src/blog/http/: mod.rs
server/src/blog/infrastructure/: filesystem_tests.rs  mod.rs
server/src/catalog/: mod.rs
server/src/catalog/application/: content_repository.rs  mod.rs  service.rs  service_tests.rs
server/src/catalog/domain/: catalog.rs  frontmatter.rs  lesson.rs  resolver.rs  resolver_tests.rs  walker.rs  walker_exclusion_tests.rs  walker_tests.rs
server/src/catalog/http/: dto.rs  routes.rs
server/src/catalog/infrastructure/: commit_sha.rs  filesystem.rs  mod.rs
server/src/execution/: mod.rs
server/src/execution/application/: mod.rs
server/src/execution/http/: mod.rs
server/src/execution/infrastructure/: java_rewriter.rs  java_rewriter_tests.rs  mod.rs  recipe.rs  runner.rs  wire.rs  wire_tests.rs
server/src/identity/application/: mod.rs
server/src/identity/http/: mod.rs
server/src/identity/infrastructure/: keycloak_admin.rs  mod.rs
server/src/insights/: http.rs  mod.rs  postgres.rs
server/src/platform/: admin_gate.rs  client_ip.rs  health.rs  http.rs  likec4_proxy.rs  mod.rs  rate_limiter.rs  rate_limiter_tests.rs  readiness.rs  security_headers.rs  static_routes.rs  static_routes_tests.rs  telemetry.rs
server/src/progress/: http.rs  mod.rs  postgres.rs
server/src/submission/: mod.rs
server/src/submission/application/: mod.rs  service_tests.rs
server/src/submission/http/: admin.rs  dto.rs  dto_tests.rs  mod.rs
server/src/submission/infrastructure/: allowlist.rs  mod.rs  postgres.rs  problem_tests.rs  problem_tests_tests.rs  progress_recorder.rs
server/tests/: admin_allowlist_it.rs  admin_lesson_views_it.rs  blog_routes_it.rs  build_config_it.rs  catalog_fs_it.rs  execution_routes_it.rs  go_judge_it.rs  health_it.rs  identity_it.rs  outbound_tls_it.rs  postgres_it.rs  progress_it.rs  rate_limit_it.rs  security_headers_it.rs  static_routes_it.rs  submission_routes_it.rs  telemetry_it.rs  tutor_routes_it.rs
server/tests/common/: mod.rs
shared/: Cargo.toml
shared/src/: authoring.rs  blog.rs  catalog.rs  insights.rs  lib.rs  progress.rs  submission.rs
shared/src/execution/: judge_vectors_test.rs  mod.rs  test_run.rs
shared/src/viz/: graph.rs  markers.rs  mod.rs  playback.rs  render_family.rs  vocabulary.rs
shared/src/viz/adapt/: projection.rs
shared/test-vectors/: judge-vectors.json
shared/tests/: cortex_goldens.rs
(+163 files in other folders)
