[workspace]
resolver = "2"
members = ["shared", "server", "client"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# ── shared surface ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5"

# ── server ──
axum = "0.8"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["env"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "macros", "migrate", "chrono", "uuid", "json"] }

# ── client ──
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "Node", "NodeList", "Storage"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"

# ── tests ──
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_yaml = "0.9"
tempfile = "3"

# ─────────────────────────────────────────────────────────────────────────────
# LINTS — the anti-pattern gate (RS001)
# Deny-by-default for the banned patterns; test code opts out per-file where
# hard asserts are the point. `forbid(unsafe_code)` is workspace law.
# ─────────────────────────────────────────────────────────────────────────────
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Curated pedantic opt-outs — naming a type after its context module is our
# convention (AppConfig in config/), and rustdoc narration replaces the
# mechanical #[must_use]/errors-section boilerplate.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
