[workspace]
resolver = "2"
members = ["shared", "server", "client"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# ── shared surface ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5"

# ── server ──
axum = "0.8"
thiserror = "2"
# `rustls-tls` is REQUIRED, not a preference. With `default-features = false` reqwest compiles in
# NO TLS backend, and every https:// request dies at the connector with "invalid URL, scheme is not
# http". That shipped to production: in dev every outbound call is plain http (go-judge, Ollama,
# the local Keycloak), so the only https caller is the PRODUCTION JWKS fetch — sign-in 503'd on the
# live site while every test stayed green. rustls bundles its own roots, so this holds even in an
# image with no ca-certificates. Pinned by `outbound_tls_it`.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["env"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "macros", "migrate", "chrono", "uuid", "json"] }

# ── client ──
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "console", "DomRect", "Element", "HtmlElement", "HtmlIFrameElement", "MutationObserver", "MutationObserverInit", "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry", "Node", "NodeList", "Storage", "CssStyleDeclaration", "AddEventListenerOptions", "Clipboard", "Navigator"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"

# ── tests ──
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_yaml = "0.9"
tempfile = "3"

# ─────────────────────────────────────────────────────────────────────────────
# LINTS — the anti-pattern gate (RS001)
# Deny-by-default for the banned patterns; test code opts out per-file where
# hard asserts are the point. `forbid(unsafe_code)` is workspace law.
# ─────────────────────────────────────────────────────────────────────────────
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Curated pedantic opt-outs — naming a type after its context module is our
# convention (AppConfig in config/), and rustdoc narration replaces the
# mechanical #[must_use]/errors-section boilerplate.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# The CLIENT's release profile (build-wasm.sh --profile wasm-release): size-first codegen
# for the wasm module. Deliberately NOT the workspace release profile — `panic = "abort"`
# is right for a browser app (the hook prints, the app is dead anyway) and wrong for the
# server (a handler panic must not kill the process).
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
