[package]
name = "synapse-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
synapse-shared = { path = "../shared" }
leptos = { workspace = true }
leptos_router = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
gloo-net = { workspace = true }
gloo-timers = { workspace = true }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
