[package]
name = "synapse-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
synapse-shared = { path = "../shared" }
axum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
tempfile = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true
