[package]
name = "synapse-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tower-http = { version = "0.6", features = [
    "compression-gzip",
    "compression-deflate",
    "trace",
    "request-id",
    "util",
] }
synapse-shared = { path = "../shared", features = ["openapi"] }
axum = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
utoipa = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
tempfile = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true
