[package]
name = "synapse-shared"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
utoipa = { workspace = true, optional = true }

[features]
# The OpenAPI half of the wire contract is a SERVER concern: the schema derives
# compile only where the spec is rendered — the wasm client never pays for them.
openapi = ["dep:utoipa"]

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
